# ArsenalRemind

./: .env  .gitignore  README.md  app.py  arsenal.py  data.json  main.py  next_match.json  pyproject.toml  reminder.py  test.py
static/css/: main.css  standings.css
templates/: index.html  main.css  next.html  standings.html
