[project]
name = "arsenalremind"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "chump>=1.6.0",
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.129.0",
    "ntfy>=2.7.1",
    "playwright>=1.58.0",
    "pytz>=2025.2",
    "requests>=2.32.5",
    "schedule>=1.2.2",
    "selenium>=4.35.0",
    "webdriver-manager>=4.0.2",
]
